--- a/diffusivity_with_Perona-Malik_Method.ipynb
+++ b/diffusivity_with_Perona-Malik_Method.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNPKH1ILDz5TDxH+eSulY6q",
+      "authorship_tag": "ABX9TyOKMPLiXviNkEnlQG8qD3DK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -272,6 +272,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Compute the Perona-Malik diffusivity with default parameters on office picture WHITOUT noise"
+      ],
+      "metadata": {
+        "id": "hvk6DnKjZdp5"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Compute the gradient magnitude\n",
@@ -314,6 +323,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "changing prona-malik diffusion default parameters"
+      ],
+      "metadata": {
+        "id": "8DW_BY9wZoWx"
+      }
     },
     {
       "cell_type": "code",
