Checking diffusivity with the Perona-Malik Method

--- a/diffusivity_with_Perona-Malik_Method.ipynb
+++ b/diffusivity_with_Perona-Malik_Method.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOKMPLiXviNkEnlQG8qD3DK",
+      "authorship_tag": "ABX9TyOGF+Dq+raD/cbI86wMBS7G",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -327,7 +327,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "changing prona-malik diffusion default parameters"
+        "changing perona-malik diffusion default parameters"
       ],
       "metadata": {
         "id": "8DW_BY9wZoWx"
@@ -404,6 +404,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Compute the Perona-Malik diffusivity with Changed parameters on noisy office picture"
+      ],
+      "metadata": {
+        "id": "Ios2OIskaTgb"
+      }
     },
     {
       "cell_type": "code",
